[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-manager"  # Zmienna nazwa projektu
version = "0.1.0"
description = "A Python application for managing attendance and student data."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=1.0",
    "numpy"
]

[tool.setuptools]
packages = ["dist"]
include_package_data = true

[tool.setuptools.package-data]
"*": ["*.csv"]  # Przykładowe dane, jeśli potrzebujesz załączyć pliki CSV
