[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-manager"
version = "0.1.0"
description = "A Python application for managing attendance and student data."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

# Tylko main.py ma być zbudowany w paczce
packages = ["dist"]
include-package-data = true

[tool.setuptools]
# Tu określamy pliki, które mają być uwzględnione w pakiecie
package-data = { 
    "": ["dist/main.py"],  # Tylko main.py
}

# Reszta plików nie będzie w paczce
[tool.setuptools.exclude]
# Możesz tu dodać inne pliki, które chcesz wykluczyć z pakietu
